--- a/dashboard.html
+++ b/dashboard.html
@@ -19,3 +19,11 @@
 <script src="dashboard.js"></script>
 </body>
 </html>
+<hr>
+
+<footer style="text-align:center;font-size:13px;color:gray;margin-top:20px;">
+  Designed & Developed by <b>Mohammad Zakariya</b> |
+  <a href="mailto:mzakariya0007@gmail.com">
+    mzakariya0007@gmail.com
+  </a>
+</footer>
