--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
   <p id="error"></p>
 </div>
 
-<footer id="footer"></footer>
+<footer id="footer">
+  <p>
+    Designed & Developed by <b>Mohammad Zakariya</b><br>
+    Contact: <a href="mailto:mzakariya0007@gmail.com">
+      mzakariya0007@gmail.com
+    </a>
+  </p>
+</footer>
 
 <script src="languages.js"></script>
 <script src="script.js"></script>
